# Updater

./: README.md  biome.jsonc  devenv.nix  devenv.yaml
.github/: dependabot.yml
.github/actions/run-in-devenv/: action.yml
.github/workflows/: ciyml  release.yml
devenv/overlays/: bun-latest.nix
encrypted/: apple-signing.sops.json  root-key.sops.json  tauri-updater.sops.json
foobar/Dirtywave Updater.app/Contents/: Info.plist
src-frontend/: .oxfmtrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
src-frontend/src/: env.d.ts  main.ts  vite-env.d.ts
src-frontend/src/boot/: hover-brackets.ts  index.ts  tauri.ts  types.ts
src-frontend/src/components/: AuxiliaryPage.vue  ChangelogButton.vue  ChangelogLine.vue  ChangelogSectionContent.vue  ChromeBar.vue  ColorText.vue  DragDropIndicator.vue  FlashingSection.vue  HoverBrackets.vue  LineToken.vue  LoadingSpinner.vue  LocalFileSelectItem.vue  SelectedVersion.vue  SettingsButton.vue  SettingsPage.vue  TitleBar.vue  TroubleshootingButton.vue  TroubleshootingContent.vue  TroubleshootingPage.vue  UpdateFirmwareButton.vue  UpdateLog.vue  UpdateLogExpansionItem.vue  VersionList.vue  VersionListItem.vue  VersionNumber.vue
src-frontend/src/composables/: use-auxiliary-views.ts  use-category-color.ts  use-custom-firmware-handler.ts  use-distance-to-elements.ts  use-drag-drop-listener.ts  use-firmware-list.ts  use-focus-history.ts  use-pick-custom-firmware.ts
src-frontend/src/composables/controllers/: use-device-state-controller.ts  use-firmware-controller.ts
src-frontend/src/css/: app.scss  colors.scss  hover-brackets.scss  quasar.variables.scss
src-frontend/src/directives/: hover-brackets.back.ts  hover-brackets.ts
src-frontend/src/layouts/: MainLayout.vue
src-frontend/src/pages/: ErrorNotFound.vue  IndexPage.vue
src-frontend/src/router/: index.ts  routes.ts
src-frontend/src/stores/: event.ts  firmware.ts  index.ts  installation.ts  serial-port-info.ts
src-frontend/src/types/: events.ts  firmware.ts  installation.ts
src-frontend/src/utils/: changelog.ts  filename-parsing.ts  index.ts  serial.ts  text.ts  url.ts
src-frontend/src/utils/events/: register-ipc-event-listener.ts
src-tauri/: Cargo.toml  crate-config.nix  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  draggable-window.json  pinia.json  tycmd.json
src-tauri/src/: firmware.rs  lib.rs  serial.rs  state.rs  updater.rs
src-tauri/src/events/: frontend_events.rs
src-tauri/src/serial/: device.rs  provider.rs  tycmd.rs
